--- a/Origami/Resources/layout/icon_level.xml
+++ b/Origami/Resources/layout/icon_level.xml
@@ -18,6 +18,7 @@
         android:textColor="@color/textColor"
         android:background="@drawable/roundedTopCorners"
         android:backgroundTint="@color/baseColor"
+        android:fontFamily="@font/somatic_rounded"
     />
 
     <ImageView
