--- a/Origami/Resources/layout/activity_mainmenu.xml
+++ b/Origami/Resources/layout/activity_mainmenu.xml
@@ -24,4 +24,10 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:text="reset state"/>
+
+    <Button
+        android:id="@+id/about_button"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:text="about"/>
 </LinearLayout>
