--- a/Origami/Resources/layout/modal_level_end.xml
+++ b/Origami/Resources/layout/modal_level_end.xml
@@ -6,7 +6,9 @@
     android:gravity="center">
 
     <LinearLayout
-        android:translationZ="2dp"
+        android:elevation="@dimen/elevation"
+        android:outlineAmbientShadowColor="@color/baseAmbientShadowColor"
+        android:outlineSpotShadowColor="@color/basePointShadowColor"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:orientation="vertical"
