--- a/Origami/Resources/layout/activity_chapterselect.xml
+++ b/Origami/Resources/layout/activity_chapterselect.xml
@@ -6,13 +6,19 @@
     android:background="@color/backgroundColor">
 
     <LinearLayout
+        android:clipToPadding="false"
         android:paddingLeft="19dp"
-        android:layout_width="83dp"
+        android:paddingRight="8dp"
+        android:layout_width="89dp"
+        android:paddingBottom="8dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageButton
             android:id="@+id/back_button"
+            android:elevation="@dimen/elevation"
+            android:outlineAmbientShadowColor="@color/baseAmbientShadowColor"
+            android:outlineSpotShadowColor="@color/basePointShadowColor"
             android:layout_width="match_parent"
             android:layout_height="77dp"
             android:background="@drawable/roundedBottomCorners"
@@ -26,29 +32,104 @@
     </LinearLayout>
     
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:gravity="bottom">
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
 
-        <include layout="@layout/icon_chapter"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/somatic_rounded"
+            android:text="chapters"
+            android:textSize="18dp"
+            android:textColor="@color/textColor"
+            android:paddingVertical="4dp"
+            android:paddingHorizontal="16dp"
+            android:background="@drawable/roundedCorners"
+            android:backgroundTint="@color/baseColor"
+            android:layout_marginVertical="25dp"
+        />
 
-        <include layout="@layout/icon_chapter"/>
+        <AbsoluteLayout
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent">
 
-        <include layout="@layout/icon_chapter"/>
+            <LinearLayout
+                android:layout_width="4dp"
+                android:layout_height="match_parent">
 
-        <include layout="@layout/icon_chapter"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/shadowRight"
+                />
+            </LinearLayout>
 
-        <include layout="@layout/icon_chapter"/>
+            <HorizontalScrollView
+                android:paddingTop="5dp"
+                android:requiresFadingEdge="horizontal"
+                android:fadingEdgeLength="2dp"
+                android:fadingEdge="@color/shadowColor"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:fadeScrollbars="false"
+                android:overScrollMode="never"
+                android:scrollbarThumbHorizontal="@drawable/scrollbarThumb"
+                android:scrollbarTrackHorizontal="@color/backgroundColor"
+                android:scrollbarSize="15dp"
+                android:scrollbars="none">
+                
+                <LinearLayout
+                    android:id="@+id/chapter_icons"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="bottom">
 
-        <include layout="@layout/icon_chapter"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:paddingRight="30dp"
+                        android:paddingLeft="10dp">
 
-        <include layout="@layout/icon_chapter"/>
+                        <include layout="@layout/icon_chapter"/>
+                    </LinearLayout>
 
-        <include layout="@layout/icon_chapter"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:paddingHorizontal="30dp">
 
-        <include layout="@layout/icon_chapter"/>
+                        <include layout="@layout/icon_chapter"/>
+                    </LinearLayout>
 
-        <include layout="@layout/icon_chapter"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:paddingHorizontal="30dp">
+
+                        <include layout="@layout/icon_chapter"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:paddingHorizontal="30dp">
+
+                        <include layout="@layout/icon_chapter"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:paddingLeft="30dp"
+                        android:paddingRight="10dp">
+
+                        <include layout="@layout/icon_chapter"/>
+                    </LinearLayout>
+                </LinearLayout>
+            </HorizontalScrollView>
+        </AbsoluteLayout>
     </LinearLayout>
 </LinearLayout>
