--- a/Origami/Resources/layout/activity_game.xml
+++ b/Origami/Resources/layout/activity_game.xml
@@ -11,8 +11,10 @@
 
     <LinearLayout
         android:paddingLeft="19dp"
-        android:layout_width="83dp"
+        android:paddingRight="19dp"
+        android:layout_width="102dp"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
         android:orientation="vertical">
 
         <ImageButton
@@ -26,6 +28,9 @@
             android:tint="@color/iconColor"
             android:paddingHorizontal="12dp"
             android:paddingBottom="15dp"
+            android:elevation="@dimen/elevation"
+            android:outlineAmbientShadowColor="@color/baseAmbientShadowColor"
+            android:outlineSpotShadowColor="@color/basePointShadowColor"
         />
 
         <LinearLayout
@@ -34,10 +39,13 @@
             android:layout_weight="1"/>
 
         <LinearLayout
+            android:outlineAmbientShadowColor="@color/baseAmbientShadowColor"
+            android:outlineSpotShadowColor="@color/basePointShadowColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/roundedtopcorners"
             android:backgroundTint="@color/baseColor"
+            android:elevation="@dimen/elevation"
             android:orientation="vertical">
 
             <TextView
@@ -129,10 +137,12 @@
     </LinearLayout>
 
     <LinearLayout
+        android:paddingLeft="19dp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="right">
+        android:gravity="right"
+        android:clipToPadding="false">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -144,7 +154,10 @@
             android:paddingLeft="7dp"
             android:paddingVertical="7dp"
             android:paddingRight="19dp"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:elevation="@dimen/elevation"
+            android:outlineAmbientShadowColor="@color/accentAmbientShadowColor"
+            android:outlineSpotShadowColor="@color/accentPointShadowColor">
 
             <ImageButton
                 android:id="@+id/help"
@@ -172,6 +185,9 @@
         </LinearLayout>
 
         <LinearLayout
+            android:elevation="@dimen/elevation"
+            android:outlineAmbientShadowColor="@color/baseAmbientShadowColor"
+            android:outlineSpotShadowColor="@color/basePointShadowColor"
             android:layout_marginTop="19dp"
             android:paddingLeft="32dp"
             android:paddingRight="32dp"
@@ -217,6 +233,8 @@
         />
 
         <LinearLayout
+            android:clipToPadding="false"
+            android:paddingTop="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -225,6 +243,9 @@
             android:gravity="right">
 
             <ImageButton
+                android:elevation="@dimen/elevation"
+                android:outlineAmbientShadowColor="@color/baseAmbientShadowColor"
+                android:outlineSpotShadowColor="@color/basePointShadowColor"
                 android:id="@+id/restart"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
@@ -244,6 +265,9 @@
             />
 
             <ImageButton
+                android:elevation="@dimen/elevation"
+                android:outlineAmbientShadowColor="@color/baseAmbientShadowColor"
+                android:outlineSpotShadowColor="@color/basePointShadowColor"
                 android:id="@+id/undo"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
