--- a/Origami/Resources/layout/activity_levelselect.xml
+++ b/Origami/Resources/layout/activity_levelselect.xml
@@ -7,13 +7,18 @@
     android:background="@color/backgroundColor">
 
     <LinearLayout
+        android:clipToPadding="false"
         android:paddingLeft="19dp"
-        android:layout_width="83dp"
-        android:layout_height="wrap_content"
+        android:paddingRight="6dp"
+        android:layout_width="89dp"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageButton
             android:id="@+id/back_button"
+            android:elevation="@dimen/elevation"
+            android:outlineAmbientShadowColor="@color/baseAmbientShadowColor"
+            android:outlineSpotShadowColor="@color/basePointShadowColor"
             android:layout_width="match_parent"
             android:layout_height="77dp"
             android:background="@drawable/roundedBottomCorners"
@@ -26,206 +31,247 @@
         />
     </LinearLayout>
 
-     <ScrollView
-        android:translationZ="10px"
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:fadeScrollbars="false"
-        android:fadingEdge="vertical"
-        android:fadingEdgeLength="10dp"
-        android:requiresFadingEdge="vertical"
-        android:overScrollMode="never"
-        android:scrollbarThumbVertical="@drawable/scrollbarThumb"
-        android:scrollbarTrackVertical="@drawable/scrollbarTrack"
-        android:scrollbarSize="15dp"
-        android:paddingRight="10dp"
-        android:paddingLeft="32dp"
-        android:background="@color/backgroundColor"
-        android:backgroundTint="@color/backgroundColor"
-        android:clipToPadding="true">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:paddingVertical="10dp"
-            android:paddingRight="20dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" 
-            android:orientation="vertical">
+            android:layout_height="80dp"
+            android:gravity="center">
 
-             <LinearLayout
-                 android:id="@+id/first_row"
-                 android:paddingBottom="16dp"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:orientation="horizontal">
-
-                 <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include android:id="@+id/lvl0" layout="@layout/icon_level"/>
-                 </LinearLayout>
-                    
-                <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include android:id="@+id/lvl1" layout="@layout/icon_level"/>
-                 </LinearLayout>
-
-                <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include android:id="@+id/lvl2" layout="@layout/icon_level"/>
-                 </LinearLayout>
-
-                <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include android:id="@+id/lvl3" layout="@layout/icon_level"/>
-                 </LinearLayout>
-            </LinearLayout>
-
-             <LinearLayout
-                 android:id="@+id/second_row"
-                 android:paddingVertical="16dp"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:orientation="horizontal">
-
-                 <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include layout="@layout/icon_level"/>
-                 </LinearLayout>
-                    
-                <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include layout="@layout/icon_level"/>
-                 </LinearLayout>
-
-                <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include layout="@layout/icon_level"/>
-                 </LinearLayout>
-
-                <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include layout="@layout/icon_level"/>
-                 </LinearLayout>
-            </LinearLayout>
-
-             <LinearLayout
-                 android:id="@+id/third_row"
-                 android:paddingVertical="16dp"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:orientation="horizontal">
-
-                 <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include layout="@layout/icon_level"/>
-                 </LinearLayout>
-                    
-                <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include layout="@layout/icon_level"/>
-                 </LinearLayout>
-
-                <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include layout="@layout/icon_level"/>
-                 </LinearLayout>
-
-                <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include layout="@layout/icon_level"/>
-                 </LinearLayout>
-            </LinearLayout>
-
-             <LinearLayout
-                 android:id="@+id/fourth_row"
-                 android:paddingTop="16dp"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:orientation="horizontal">
-
-                 <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include layout="@layout/icon_level"/>
-                 </LinearLayout>
-                    
-                <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include layout="@layout/icon_level"/>
-                 </LinearLayout>
-
-                <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include layout="@layout/icon_level"/>
-                 </LinearLayout>
-
-                <LinearLayout
-                     android:layout_width="fill_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:gravity="center">
-
-                     <include layout="@layout/icon_level"/>
-                 </LinearLayout>
-            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/somatic_rounded"
+                android:text="Eagle - 2/16"
+                android:textSize="18dp"
+                android:background="@drawable/roundedCorners"
+                android:backgroundTint="@color/baseColor"
+                android:paddingVertical="4dp"
+                android:paddingHorizontal="16dp"
+                android:textColor="@color/textColor"/>
         </LinearLayout>
-    </ScrollView>
+
+        <AbsoluteLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:paddingRight="35dp"
+                android:paddingLeft="4dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/shadowBottom"/>
+            </LinearLayout>
+
+            <ScrollView
+                android:requiresFadingEdge="vertical"
+                android:fadingEdgeLength="2dp"
+                android:fadingEdge="@color/shadowColor"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:fadeScrollbars="false"
+                android:overScrollMode="never"
+                android:scrollbarThumbVertical="@drawable/scrollbarThumb"
+                android:scrollbarTrackVertical="@color/backgroundColor"
+                android:scrollbarSize="15dp"
+                android:paddingRight="19dp"
+                android:paddingLeft="5dp">
+
+                <LinearLayout
+                    android:paddingVertical="10dp"
+                    android:paddingRight="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" 
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:id="@+id/first_row"
+                        android:paddingBottom="16dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include android:id="@+id/lvl0" layout="@layout/icon_level"/>
+                        </LinearLayout>
+                    
+                    <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include android:id="@+id/lvl1" layout="@layout/icon_level"/>
+                        </LinearLayout>
+
+                    <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include android:id="@+id/lvl2" layout="@layout/icon_level"/>
+                        </LinearLayout>
+
+                    <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include android:id="@+id/lvl3" layout="@layout/icon_level"/>
+                        </LinearLayout>
+                </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/second_row"
+                        android:paddingVertical="16dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include layout="@layout/icon_level"/>
+                        </LinearLayout>
+                    
+                    <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include layout="@layout/icon_level"/>
+                        </LinearLayout>
+
+                    <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include layout="@layout/icon_level"/>
+                        </LinearLayout>
+
+                    <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include layout="@layout/icon_level"/>
+                        </LinearLayout>
+                </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/third_row"
+                        android:paddingVertical="16dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include layout="@layout/icon_level"/>
+                        </LinearLayout>
+                    
+                    <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include layout="@layout/icon_level"/>
+                        </LinearLayout>
+
+                    <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include layout="@layout/icon_level"/>
+                        </LinearLayout>
+
+                    <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include layout="@layout/icon_level"/>
+                        </LinearLayout>
+                </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/fourth_row"
+                        android:paddingTop="16dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include layout="@layout/icon_level"/>
+                        </LinearLayout>
+                    
+                    <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include layout="@layout/icon_level"/>
+                        </LinearLayout>
+
+                    <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include layout="@layout/icon_level"/>
+                        </LinearLayout>
+
+                    <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <include layout="@layout/icon_level"/>
+                        </LinearLayout>
+                </LinearLayout>
+                </LinearLayout>
+            </ScrollView>
+
+            
+        </AbsoluteLayout>
+
+        
+    </LinearLayout>
 </LinearLayout>
