--- a/Origami/Resources/layout/icon_chapter.xml
+++ b/Origami/Resources/layout/icon_chapter.xml
@@ -2,49 +2,57 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="150dp"
-    android:layout_height="287dp"
-    android:background="@drawable/roundedCorners"
-    android:backgroundTint="@color/secondaryColor"
-    android:translationZ="2dp"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:background="@drawable/roundedTopCorners"
+    android:backgroundTint="@color/secondaryColor">
 
-    <ImageView
-        android:id="@+id/origami_sample"
-        android:src="@drawable/origami_sample"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:scaleType="fitCenter"    
-        android:paddingHorizontal="10dp"
-        android:layout_weight="1"
-    />   
+    <LinearLayout 
+        android:layout_width="150dp"
+        android:layout_height="287dp"
+        android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@drawable/roundedCorners"
-        android:backgroundTint="@color/baseColor"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
-
-        <TextView
+        <ImageView
+            android:id="@+id/origami_sample"
+            android:src="@drawable/origami_sample"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Eagle"
-            android:gravity="center"
-            android:textSize="18dp"
-            android:paddingTop="18dp"
-            android:textColor="@color/thirdColor"
-            android:paddingBottom="8dp"
-        />
+            android:layout_height="fill_parent"
+            android:scaleType="fitCenter"    
+            android:paddingHorizontal="10dp"
+            android:layout_weight="1"
+        />   
 
-        <TextView
-            android:layout_width="80dp"
-            android:layout_height="30dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginHorizontal="8dp"
             android:background="@drawable/roundedCorners"
-            android:backgroundTint="@color/secondaryColor"
-            android:text="15/20"
-            android:textSize="18dp"
-            android:textColor="@color/thirdColor"
-            android:gravity="center"/>
+            android:backgroundTint="@color/baseColor"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Eagle"
+                android:gravity="center"
+                android:textSize="18dp"
+                android:paddingTop="18dp"
+                android:textColor="@color/textColor"
+                android:fontFamily="@font/somatic_rounded"
+                android:paddingBottom="8dp"
+            />
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:background="@drawable/roundedCorners"
+                android:backgroundTint="@color/secondaryColor"
+                android:text="15/20"
+                android:textSize="18dp"
+                android:textColor="@color/textColor"
+                android:fontFamily="@font/somatic_rounded"
+                android:gravity="center"/>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
+
