--- a/Origami/Resources/layout/icon_level.xml
+++ b/Origami/Resources/layout/icon_level.xml
@@ -4,8 +4,7 @@
     android:layout_width="120dp"
     android:layout_height="120dp"
     android:background="@drawable/roundedCorners"
-    android:backgroundTint="@color/secondaryColor"
-    android:translationZ="2dp">
+    android:backgroundTint="@color/secondaryColor">
 
     <TextView
         android:id="@+id/level_number"
