--- a/Origami/Resources/layout/modal_level_lose.xml
+++ b/Origami/Resources/layout/modal_level_lose.xml
@@ -7,7 +7,9 @@
     >
 
     <LinearLayout
-        android:translationZ="2dp"
+        android:elevation="@dimen/elevation"
+        android:outlineAmbientShadowColor="@color/baseAmbientShadowColor"
+        android:outlineSpotShadowColor="@color/basePointShadowColor"
         android:layout_width="155dp"
         android:layout_height="155dp"
         android:orientation="vertical"
