--- a/Origami/Resources/layout/activity_levelselect.xml
+++ b/Origami/Resources/layout/activity_levelselect.xml
@@ -54,224 +54,10 @@
                 android:textColor="@color/textColor"/>
         </LinearLayout>
 
-        <AbsoluteLayout
+        <android.support.v4.view.ViewPager
+            android:id="@+id/levels_pager"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:paddingRight="35dp"
-                android:paddingLeft="4dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/shadowBottom"/>
-            </LinearLayout>
-
-            <ScrollView
-                android:requiresFadingEdge="vertical"
-                android:fadingEdgeLength="2dp"
-                android:fadingEdge="@color/shadowColor"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:fadeScrollbars="false"
-                android:overScrollMode="never"
-                android:scrollbarThumbVertical="@drawable/scrollbarThumb"
-                android:scrollbarTrackVertical="@color/backgroundColor"
-                android:scrollbarSize="15dp"
-                android:paddingRight="19dp"
-                android:paddingLeft="5dp">
-
-                <LinearLayout
-                    android:paddingVertical="10dp"
-                    android:paddingRight="20dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" 
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:id="@+id/first_row"
-                        android:paddingBottom="16dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include android:id="@+id/lvl0" layout="@layout/icon_level"/>
-                        </LinearLayout>
-                    
-                    <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include android:id="@+id/lvl1" layout="@layout/icon_level"/>
-                        </LinearLayout>
-
-                    <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include android:id="@+id/lvl2" layout="@layout/icon_level"/>
-                        </LinearLayout>
-
-                    <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include android:id="@+id/lvl3" layout="@layout/icon_level"/>
-                        </LinearLayout>
-                </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/second_row"
-                        android:paddingVertical="16dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include layout="@layout/icon_level"/>
-                        </LinearLayout>
-                    
-                    <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include layout="@layout/icon_level"/>
-                        </LinearLayout>
-
-                    <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include layout="@layout/icon_level"/>
-                        </LinearLayout>
-
-                    <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include layout="@layout/icon_level"/>
-                        </LinearLayout>
-                </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/third_row"
-                        android:paddingVertical="16dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include layout="@layout/icon_level"/>
-                        </LinearLayout>
-                    
-                    <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include layout="@layout/icon_level"/>
-                        </LinearLayout>
-
-                    <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include layout="@layout/icon_level"/>
-                        </LinearLayout>
-
-                    <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include layout="@layout/icon_level"/>
-                        </LinearLayout>
-                </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/fourth_row"
-                        android:paddingTop="16dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include layout="@layout/icon_level"/>
-                        </LinearLayout>
-                    
-                    <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include layout="@layout/icon_level"/>
-                        </LinearLayout>
-
-                    <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include layout="@layout/icon_level"/>
-                        </LinearLayout>
-
-                    <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center">
-
-                            <include layout="@layout/icon_level"/>
-                        </LinearLayout>
-                </LinearLayout>
-                </LinearLayout>
-            </ScrollView>
-
-            
-        </AbsoluteLayout>
-
-        
+            android:layout_height="match_parent"
+        />
     </LinearLayout>
 </LinearLayout>
