--- a/Origami/Resources/layout/icon_chapter.xml
+++ b/Origami/Resources/layout/icon_chapter.xml
@@ -4,7 +4,11 @@
     android:layout_width="150dp"
     android:layout_height="match_parent"
     android:background="@drawable/roundedTopCorners"
-    android:backgroundTint="@color/secondaryColor">
+    android:backgroundTint="@color/secondaryColor"
+    android:elevation="@dimen/elevation"
+    android:outlineAmbientShadowColor="@color/baseAmbientShadowColor"
+    android:outlineSpotShadowColor="@color/basePointShadowColor"
+    android:clipToPadding="false">
 
     <LinearLayout 
         android:layout_width="150dp"
@@ -12,7 +16,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/origami_sample"
+            android:id="@+id/origami_image"
             android:src="@drawable/origami_sample"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
@@ -31,6 +35,7 @@
             android:gravity="center_horizontal">
 
             <TextView
+                android:id="@+id/chapter_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Eagle"
@@ -43,6 +48,7 @@
             />
 
             <TextView
+                android:id="@+id/chapter_progress"
                 android:layout_width="80dp"
                 android:layout_height="30dp"
                 android:background="@drawable/roundedCorners"
